fix(body):overflow: hidden;

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   
   body {
     background-color: #f0552e;
+    overflow: hidden;
   }
   
   .sec-loading {
